--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,32 @@
-div {
+.div-logo {
     background-color: #4BA4F2;
     height: 100px;
     background-image: url(../img/pattern.png);
     background-size: contain;
-    
 }
 
 #logo { height: 80px;
-
 }
 
 span {
     color: aqua;
     font-weight: bold;
+}
+
+table {
+    border-spacing: 0;
+}
+
+.th25 {
+    width: 25%;
+    background-color: #20A9E5;
+    color: white;
+}
+
+
+
+.th50 {
+    width: 50%;
+    background-color: #20A9E5;
+    color: white;
 }
