--- a/css/style.css
+++ b/css/style.css
@@ -8,25 +8,60 @@
 #logo { height: 80px;
 }
 
-span {
-    color: aqua;
+.lightblu-p {
     font-weight: bold;
+    color: lightblue;
+}
+
+.highlighted {
+    background-color: yellow;
 }
 
 table {
     border-spacing: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
 }
 
 .th25 {
     width: 25%;
     background-color: #20A9E5;
     color: white;
+    text-align: left;
 }
-
-
 
 .th50 {
     width: 50%;
     background-color: #20A9E5;
     color: white;
+    text-align: left;
 }
+
+.trcolor {
+    background-color: #B1E5F2;
+}
+
+footer {
+    margin-top: 30px;
+    font-weight: bold;
+    color: grey;
+}
+
+.imgbox1 {
+    background-image: url(../img/monitor.jpg);
+    background-size: cover;
+    width: 300px;
+    height: 200px;
+    color: white;
+    margin-top: 15px;
+}
+
+.imgbox2 {
+    background-image: url(../img/graph.jpg);
+    background-size: contain;
+    width: 300px;
+    height: 200px;
+    color: white;
+    margin-top: 15px;
+}
+
